--- a/roles/common/tasks/ferm.yml
+++ b/roles/common/tasks/ferm.yml
@@ -7,6 +7,12 @@
 - name: Create ferm configuration directory
   file: path=/etc/ferm state=directory
 
+- name: Start ferm
+  service: name=ferm state=started
+
+- name: Enable ferm on boot
+  service: name=ferm enabled=yes
+
 - name: Copy ferm firewall rules into place
   copy: src=etc_ferm_ferm.conf dest=/etc/ferm/ferm.conf
   notify:
